<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/main_menu_group" >
        <item
            android:id="@+id/actions"
            android:icon="@drawable/actions"
            android:orderInCategory="90"
            android:showAsAction="ifRoom"
            android:title="Options">
            <menu>
                <item
                    android:id="@+id/action_addcontact"
                    android:orderInCategory="110"
                    android:showAsAction="always"
                    android:title="@string/add_contact"/>
                <item
                    android:id="@+id/action_seetexts"
                    android:orderInCategory="100"
                    android:showAsAction="always"
                    android:title="@string/seetexts"/>
                <item
                    android:id="@+id/action_seecalls"
                    android:orderInCategory="90"
                    android:showAsAction="always"
                    android:title="@string/seecalls"/>
            </menu>
        </item>
    </group>

</menu>

<!--  
                <item
                    android:id="@+id/action_delnoncontact"
                    android:orderInCategory="120"
                    android:showAsAction="always"
                    android:title="@string/delete_noncontact"/>
 -->